--- a/orders.html
+++ b/orders.html
@@ -1,161 +1,133 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>订单管理 | Shop</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      color: #ff6b6b;
-    }
-    .order-container {
-      max-width: 1200px;
-      margin: 20px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .order-card {
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      padding: 15px;
-      margin-bottom: 20px;
-      background: #fff;
-    }
-    .order-card h3 {
-      margin: 0 0 10px;
-      color: #333;
-    }
-    .order-card p {
-      margin: 5px 0;
-      font-size: 14px;
-      color: #555;
-    }
-    .order-card ul {
-      list-style: none;
-      padding-left: 0;
-      margin: 10px 0 0;
-    }
-    .order-card li {
-      margin: 5px 0;
-      font-size: 14px;
-      color: #555;
-    }
-    .back-btn {
-      background: #007bff;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-bottom: 20px;
-      display: block;
-      width: 150px;
-    }
-    .back-btn:hover {
-      background: #0056b3;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>订单管理</title>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 20px;
+            padding: 20px;
+        }
+        .order {
+            background: white;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        img {
+            width: 100px;
+            border-radius: 5px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        .product-info {
+            margin-left: 10px;
+        }
+    </style>
 </head>
 <body>
-  <button id="back-btn" class="back-btn">返回卖家平台</button>
-  <h1>订单管理</h1>
-  <div class="order-container" id="order-container">
-    <p>加载订单中...</p>
-  </div>
 
-  <script type="module">
-    // 导入 Firebase 模块
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getFirestore, collection, getDocs, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    <h2>订单管理</h2>
+    <div id="orders-container">
+        <p>加载中...</p>
+    </div>
 
-    // Firebase 配置
-    const firebaseConfig = {
-      apiKey: "AIzaSyCh7tgqEZb1zLICy6trriTCMJlXEe0x6hM",
-      authDomain: "shop-87351.firebaseapp.com",
-      projectId: "shop-87351",
-      storageBucket: "shop-87351.appspot.com",
-      messagingSenderId: "994764608061",
-      appId: "1:994764608061:web:e7a5a041cd3e082daad054"
-    };
+    <script>
+        // 🔥 Firebase 配置
+        const firebaseConfig = {
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+            projectId: "YOUR_PROJECT_ID",
+            storageBucket: "YOUR_PROJECT_ID.appspot.com",
+            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+            appId: "YOUR_APP_ID"
+        };
+        firebase.initializeApp(firebaseConfig);
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const auth = getAuth(app);
+        const db = firebase.firestore();
 
-    // 检查用户权限
-    onAuthStateChanged(auth, async (user) => {
-      if (!user) {
-        window.location.href = "login.html"; // 未登录用户跳转到登录页
-      } else {
-        const userDocRef = doc(db, "users", user.uid);
-        const userDocSnap = await getDoc(userDocRef);
-
-        if (userDocSnap.exists() && userDocSnap.data().role === "1") {
-          console.log("管理员身份验证通过");
-          loadOrders(); // 加载订单
-        } else {
-          console.log("无管理员权限，跳转到 shop.html");
-          window.location.href = "shop.html"; // 非管理员跳转到 shop.html
-        }
-      }
-    });
-
-    // 加载订单数据
-    async function loadOrders() {
-      const orderContainer = document.getElementById("order-container");
-      orderContainer.innerHTML = "<p>加载订单中...</p>";
-
-      try {
-        const querySnapshot = await getDocs(collection(db, "orders"));
-
-        if (querySnapshot.empty) {
-          orderContainer.innerHTML = "<p>暂无订单。</p>";
-          return;
-        }
-
-        orderContainer.innerHTML = "";
-        querySnapshot.forEach((docSnap) => {
-          const order = docSnap.data();
-          const orderCard = document.createElement("div");
-          orderCard.classList.add("order-card");
-
-          // 订单详细信息
-          orderCard.innerHTML = `
-            <h3>订单号: ${order.ordersnumber}</h3>
-            <p><strong>下单时间:</strong> ${new Date(order.orderTime).toLocaleString()}</p>
-            <p><strong>总价:</strong> ¥${order.total}</p>
-            <h4>客户信息:</h4>
-            <p><strong>姓名:</strong> ${order.customer.name}</p>
-            <p><strong>电子邮件:</strong> ${order.customer.email}</p>
-            <p><strong>电话:</strong> ${order.customer.phone}</p>
-            <p><strong>地址:</strong> ${order.customer.address}</p>
-            <h4>购买商品:</h4>
-            <ul>
-              ${order.items.map(item => `<li>${item.name} - 数量: ${item.quantity} - 单价: ¥${parseFloat(item.price).toFixed(2)}</li>`).join("")}
-            </ul>
-          `;
-          orderContainer.appendChild(orderCard);
+        // 监听用户登录状态
+        firebase.auth().onAuthStateChanged(user => {
+            if (user) {
+                console.log("用户已登录:", user.uid);
+                loadOrders(user.uid);
+            } else {
+                console.log("用户未登录");
+                window.location.href = "login.html"; // 🚀 未登录跳转到登录页
+            }
         });
-      } catch (error) {
-        console.error("加载订单失败:", error);
-        orderContainer.innerHTML = "<p>加载订单失败，请稍后再试！</p>";
-      }
-    }
 
-    // 返回按钮
-    document.getElementById("back-btn").addEventListener("click", () => {
-      window.location.href = "seller.html";
-    });
-  </script>
+        function loadOrders(userId) {
+            const ordersContainer = document.getElementById("orders-container");
+            ordersContainer.innerHTML = "<p>加载订单中...</p>";
+
+            db.collection("orders")
+                .where("userId", "==", userId) // 确保每个用户只看到自己的订单
+                .get()
+                .then(snapshot => {
+                    if (snapshot.empty) {
+                        ordersContainer.innerHTML = "<p>暂无订单</p>";
+                        return;
+                    }
+
+                    ordersContainer.innerHTML = ""; // 清空加载信息
+
+                    snapshot.forEach(doc => {
+                        let order = doc.data();
+                        console.log("订单数据:", order);
+                        displayOrder(order, ordersContainer);
+                    });
+                })
+                .catch(error => {
+                    console.error("获取订单出错:", error);
+                    ordersContainer.innerHTML = "<p>获取订单失败，请检查控制台错误信息</p>";
+                });
+        }
+
+        function displayOrder(order, container) {
+            let orderHTML = `
+                <div class="order">
+                    <h3>订单号: ${order.ordersnumber}</h3>
+                    <p>总价: ${order.total} 元</p>
+                    <p>下单时间: ${order.timestamp.toDate().toLocaleString()}</p>
+                    <h4>用户信息:</h4>
+                    <p>姓名: ${order.customer.name}</p>
+                    <p>电话: ${order.customer.phone}</p>
+                    <p>邮箱: ${order.customer.email}</p>
+                    <p>地址: ${order.customer.address}</p>
+                    <h4>商品列表:</h4>
+                    <ul>
+                        ${order.items.map(item => `
+                            <li>
+                                <img src="${item.image}" alt="${item.name}">
+                                <div class="product-info">
+                                    <p>名称: ${item.name}</p>
+                                    <p>单价: ${item.price} 元</p>
+                                    <p>数量: ${item.quantity}</p>
+                                </div>
+                            </li>
+                        `).join('')}
+                    </ul>
+                </div>
+            `;
+            container.innerHTML += orderHTML;
+        }
+    </script>
+
 </body>
 </html>
