--- a/orders.html
+++ b/orders.html
@@ -4,41 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>订单管理</title>
-    <!-- Firebase -->
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 20px;
-            padding: 20px;
-        }
-        .order {
-            background: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        img {
-            width: 100px;
-            border-radius: 5px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-        .product-info {
-            margin-left: 10px;
-        }
-    </style>
 </head>
 <body>
 
@@ -48,7 +17,7 @@
     </div>
 
     <script>
-        // 🔥 Firebase 配置
+        // ✅ Firebase 配置
         const firebaseConfig = {
             apiKey: "YOUR_API_KEY",
             authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
@@ -58,17 +27,16 @@
             appId: "YOUR_APP_ID"
         };
         firebase.initializeApp(firebaseConfig);
-
         const db = firebase.firestore();
 
-        // 监听用户登录状态
+        // ✅ 监听用户登录状态
         firebase.auth().onAuthStateChanged(user => {
             if (user) {
                 console.log("用户已登录:", user.uid);
                 loadOrders(user.uid);
             } else {
                 console.log("用户未登录");
-                window.location.href = "login.html"; // 🚀 未登录跳转到登录页
+                window.location.href = "login.html";
             }
         });
 
@@ -77,7 +45,7 @@
             ordersContainer.innerHTML = "<p>加载订单中...</p>";
 
             db.collection("orders")
-                .where("userId", "==", userId) // 确保每个用户只看到自己的订单
+                .where("userId", "==", userId)
                 .get()
                 .then(snapshot => {
                     if (snapshot.empty) {
@@ -85,11 +53,9 @@
                         return;
                     }
 
-                    ordersContainer.innerHTML = ""; // 清空加载信息
-
+                    ordersContainer.innerHTML = "";
                     snapshot.forEach(doc => {
                         let order = doc.data();
-                        console.log("订单数据:", order);
                         displayOrder(order, ordersContainer);
                     });
                 })
