--- a/login.html
+++ b/login.html
@@ -5,73 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录 | Shop</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module">
-        // Firebase SDK
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
-        import { getAuth, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
-
-        // Firebase 配置
-        const firebaseConfig = {
-            apiKey: "AIzaSyCh7tgqEZb1zLICy6trriTCMJlXEe0x6hM",
-            authDomain: "shop-87351.firebaseapp.com",
-            projectId: "shop-87351",
-            storageBucket: "shop-87351.appspot.com",
-            messagingSenderId: "994764608061",
-            appId: "1:994764608061:web:e7a5a041cd3e082daad054"
-        };
-
-        // 初始化 Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const provider = new GoogleAuthProvider();
-        const db = getFirestore(app);
-
-        document.addEventListener("DOMContentLoaded", () => {
-            document.getElementById("google-login").addEventListener("click", async () => {
-                try {
-                    const result = await signInWithPopup(auth, provider);
-                    const user = result.user;
-                    console.log("✅ 登录成功:", user);
-
-                    // 获取 Firestore 用户数据
-                    const userRef = doc(db, "users", user.uid);
-                    console.log("📡 正在查询 Firestore 数据...");
-                    const userSnap = await getDoc(userRef);
-
-                    if (userSnap.exists()) {
-                        const userData = userSnap.data();
-                        console.log("🔍 Firestore 数据:", userData);
-
-                        // **检查 role 是否存在**
-                        const role = userData.role ? String(userData.role) : "0";
-                        console.log(`🎭 角色: ${role}`);
-
-                        if (role === "1") {
-                            console.log("🎉 卖家身份，跳转到 seller.html");
-                            window.location.href = "seller.html"; // 卖家跳转
-                        } else {
-                            console.log("🚀 普通用户，跳转到 home.html");
-                            window.location.href = "home.html"; // 普通用户跳转
-                        }
-                    } else {
-                        console.warn("⚠️ Firestore 没有找到用户文档，跳转到 register.html...");
-                        await setDoc(userRef, {
-                            name: user.displayName,
-                            email: user.email,
-                            role: "0", // 默认普通用户
-                            address: "",
-                            phone: ""
-                        });
-                        window.location.href = "register.html"; // 新用户跳转到注册页面
-                    }
-
-                } catch (error) {
-                    console.error("❌ 登录失败", error);
-                }
-            });
-        });
-    </script>
+    <script type="module" defer src="login.js"></script> <!-- ✅ 让 JS 独立成文件，避免浏览器报错 -->
 </head>
 <body>
     <div class="login-container">
