--- a/login.html
+++ b/login.html
@@ -12,6 +12,11 @@
         <div class="login-box">
             <h2>欢迎来到 <span class="brand-name">Shop</span></h2>
             <p>登录以开始您的购物之旅</p>
+
+            <!-- ✅ CAPTCHA 验证 -->
+            <img id="captcha-image" src="" alt="验证码" style="width: 200px; height: 80px; margin-bottom: 10px;">
+            <input type="text" id="captcha-input" placeholder="请输入验证码" style="display: block; margin-bottom: 10px; padding: 5px; text-align: center;">
+            
             <button id="google-login" class="google-btn">
                 <img src="google-icon.png" alt="Google Logo"> 使用 Google 登录
             </button>
