--- a/login.html
+++ b/login.html
@@ -19,9 +19,11 @@
             <h2>欢迎来到 <span class="brand-name">Shop</span></h2>
             <p>请完成验证码以继续</p>
 
-            <!-- ✅ 验证码图片 -->
+            <!-- ✅ 验证码框 -->
             <div id="captcha-container">
-                <img id="captcha-image" src="" alt="验证码" style="display: none;">
+                <div id="captcha-box">
+                    <img id="captcha-image" src="" alt="验证码">
+                </div>
                 <input type="text" id="captcha-input" placeholder="输入验证码">
                 <button id="captcha-submit">验证</button>
             </div>
