--- a/login.html
+++ b/login.html
@@ -5,32 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录 | Shop</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" defer src="login.js"></script> 
+    <script type="module" defer src="login.js"></script>
 </head>
 <body>
-    <!-- ✅ 全屏遮罩层（加载时显示，加载完成后隐藏） -->
+    <!-- ✅ 加载遮罩层 -->
     <div id="loading-overlay">
-        <div class="loading-content">
-            <img src="loading.gif" alt="加载中..." class="loading-gif">
-            <p>正在加载验证码...</p>
-        </div>
+        <img src="loading.gif" alt="加载中">
+        <p>正在加载，请稍候...</p>
     </div>
 
     <div class="login-container">
         <div class="login-box">
             <h2>欢迎来到 <span class="brand-name">Shop</span></h2>
-            <p>请完成验证码以继续</p>
+            <p>请先完成验证码验证</p>
 
-            <!-- ✅ 验证码框 -->
-            <div id="captcha-container">
-                <div id="captcha-box">
-                    <img id="captcha-image" src="" alt="验证码">
-                </div>
-                <input type="text" id="captcha-input" placeholder="输入验证码">
-                <button id="captcha-submit">验证</button>
+            <!-- ✅ 验证码区 -->
+            <div class="captcha-container">
+                <img id="captcha-img" src="" alt="验证码加载中">
+                <input type="text" id="captcha-input" placeholder="请输入验证码">
+                <button id="captcha-submit">提交</button>
+                <p id="captcha-error" class="error-msg"></p>
             </div>
 
-            <!-- ✅ Google 登录按钮（默认隐藏） -->
+            <!-- ✅ Google 登录按钮（默认隐藏，正确验证码后才显示） -->
             <button id="google-login" class="google-btn" style="display: none;">
                 <img src="google-icon.png" alt="Google Logo"> 使用 Google 登录
             </button>
